fix: again, the previous effort was not enough. trying a new text align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,6 +336,7 @@ footer {
         display: flex;
         flex-direction: column;
         font-size: 18px;
+        text-align: left;
         
     }
 }
